# doit

./: .gitee-ci.yml  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  README.md  components.d.ts  doit-backup-2026-06-13339.db  doit-db-backup_1781850260.db  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
.trae/documents/: add-clear-data-feature.md  add-compare-link-to-release-notes.md  add-completion-rate-pie-plan.md  add-heatmap-view-plan.md  add-major-release-script.md  add-parent-collapse-expand.md  add-timeline-view.md  category-default-plan.md  category-filter-and-management-plan.md  category_dropdown_fix_plan.md  check-update-feature-plan.md  checkbox-fast-click-fix_plan.md  cross-day-completion-behavior-plan.md  cross-day-first-level-only-plan.md  fix-export-buttons-plan.md  fix-export-db-logic.md  fix-pdf-chinese-font-plan.md  fix-sort-and-shortcut-plan.md  fix-startup-fetch-not-working.md  fix-tauri-export-db-path.md  fix-tauri-export-db-plan.md  fix-windows-installer-icon.md  github-migration-plan.md  nested-drag-bugfixes.md  optimize-subtask-shortcut.md  optimize-toggle-complete.md  parent-drag-children-follow.md  (+14 more)
scripts/: fix-ico.mjs  generate-changelog.js  generate-icons.cjs  generate-icons.mjs  generate-release-notes.mjs  release.mjs  sync-version.mjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  update_service.rs
(+31 files in other folders)
